Issue #DV-22: Fixed layout of elements so you can actually use google inside (the header stretced and had a higher z-index)

--- a/themes/nyiaarhus/scss/modules/_google-inside.scss
+++ b/themes/nyiaarhus/scss/modules/_google-inside.scss
@@ -6,10 +6,10 @@
 
 .google-inside {
   align-items: stretch;
-  display: flex;
-  position: absolute;
   bottom: 0;
+  display: flex;
   left: 0;
+  position: absolute;
   right: 0;
   top: 0;
 
@@ -18,15 +18,13 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: center;
     position: relative;
   }
 
   &--header {
-    align-self: stretch;
     color: $white;
-    flex-grow: 1;
     font-weight: 800;
+    margin-bottom: auto;
     margin-top: 3.5em;
     text-align: center;
     text-transform: uppercase;
